--- a/src/components/left/main/LeftMain.scss
+++ b/src/components/left/main/LeftMain.scss
@@ -2,7 +2,7 @@
   height: 100%;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   overflow: hidden;
   background: var(--color-background);
 
@@ -11,44 +11,12 @@
     overflow: hidden;
   }
 
-  .ChatFolders {
-    height: 100%;
+  .left-column-inner {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-
-    .tabs-placeholder {
-      height: 2.625rem;
-      /* stylelint-disable-next-line plugin/no-low-performance-animation-properties */
-      transition: height 150ms ease;
-
-      &:not(.open) {
-        height: 0;
-      }
-    }
-
-    .TabList {
-      justify-content: flex-start;
-      border-bottom: 0;
-      z-index: 1;
-
-      opacity: 1;
-      transition: opacity var(--layer-transition);
-    }
-
-    &--tabs-hidden .TabList {
-      pointer-events: none;
-      opacity: 0.25;
-    }
-
-    .Tab {
-      flex: 0 0 auto;
-    }
-
-    > .Transition {
-      flex: 1;
-      overflow: hidden;
-    }
+    flex-grow: 1;
+    flex-shrink: 0;
+    width: calc(100% - 107px);
   }
 
   .RecentContacts,
