fix: LeftColumn height

--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -34,7 +34,7 @@
   width: 33vw;
   min-width: var(--left-column-min-width);
   max-width: var(--left-column-max-width);
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   position: relative;
 
