--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -194,6 +194,8 @@ $color-message-story-mention-to: #74bcff;
   --color-forum-hover-unread-topic: #e9e9e9;
   --color-forum-hover-unread-topic-hover: #dcdcdc;
 
+  --color-folders-background: #212121;
+
   --color-deleted-account: #9eaab5;
   --color-archive: #9eaab5;
   --stars-gradient: linear-gradient(90deg, #FFAA00 0%, #FFCD3A 100%);
